syntax = "proto3";

import "time.proto";

option go_package = "datamodel";

package datamodel;

message PingMeasurement {
    uint32 src          =  1;
    uint32 dst          =  2;
    uint32 spoofer_addr =  3;
    bool spoof          =  4;
    bool RR             =  5;
    string s_addr       =  6;
    string payload      =  7;
    string count        =  8;
    string icmp_sum     =  9;
    string dport        = 10;
    string sport        = 11;
    string wait         = 12;
    string ttl          = 13;
    string mtu          = 14;
    string reply_count  = 15;
    string pattern      = 16;
    string method       = 17;
    string size         = 18;
    string user_id      = 19;
    string tos          = 20;
    string time_stamp   = 21;
    int64 timeout       = 22;
    bool  icmp_timestamp = 23;
    bool check_cache    = 24;
    bool check_db       = 25;
    int64 staleness     = 26;
    bool is_ripe_atlas  = 27;
    string ripe_api_key = 28;
    string ripe_query_url  = 29;
    string ripe_query_body = 30;
    string label           = 31;
    bool   save_db      = 32;
    bool is_absolute_spoof_timeout = 33;
    uint32 spoof_timeout = 34;
    bool from_revtr = 35;
}

message PingArg {
  repeated PingMeasurement pings = 1;
}

message PingArgResp {
  repeated Ping pings = 1;
}

message PingStats {
    int32 replies = 1;
    float loss    = 2;
    float min     = 3;
    float max     = 4;
    float avg     = 5;
    float stddev  = 6;
}

message PingResponse {
    uint32 from                  =  1;
    uint32 seq                   =  2;
    uint32 reply_size            =  3;
    uint32 reply_ttl             =  4;
    string reply_proto           =  5;
    Time tx                      =  6;
    Time rx                      =  7;
    uint32 rtt                   =  8;
    uint32 probe_ipid            =  9;
    uint32 reply_ipid            = 10;
    uint32 icmp_type             = 11;
    uint32 icmp_code             = 12;
    repeated uint32 RR           = 13;
    repeated uint32 tsonly       = 14;
    repeated TsAndAddr tsandaddr = 15;
    ICMPTs icmp_ts               = 16;

}

message TsAndAddr {
  uint32 ip  = 1;
  uint32 ts  = 2;
}

message ICMPTs {
  uint32 originate_timestamp = 1;
  uint32 receive_timestamp   = 2;
  uint32 transmit_timestamp  = 3;
}

message Ping {
  string type                     =  1;
  string method                   =  2;
  uint32 src                      =  3;
  uint32 dst                      =  4;
  Time start                      =  5;
  uint32 ping_sent                =  6;
  uint32 probe_size               =  7;
  uint32 user_id                  =  8;
  uint32 ttl                      =  9;
  uint32 wait                     = 10;
  uint32 timeout                  = 11;
  repeated string flags           = 12;
  repeated PingResponse responses = 13;
  PingStats statistics            = 14;
  string error                    = 15;
  string version                  = 16;
  uint32 spoofed_from             = 17;
  int64 id                        = 18;
  string label                    = 19;
  bool from_cache = 20;
  bool from_revtr = 21;
  uint64 revtr_measurement_id = 22;

}
